lab1/parser.output
Terminals unused in grammar

   PLUS_ONE
   ONE_PLUS
   MINUS_ONE
   ONE_MINUS
   ASSIGNOP_MINUS
   ASSIGNOP_PLUS
   ASSIGNOP_DIV
   ASSIGNOP_STAR
   STRUCT_DEF
   STRUCT_DEC
   STRUCT_TAG
   BREAK_NODE
   CONTINUE_NODE
   FOR_DEC
   EXT_DEF_LIST
   EXT_VAR_DEF
   EXT_STRUCT_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ
   EXP_ELE
   EXP_ARRAY
   ARRAY_DEC


状态 105 conflicts: 10 reduce/reduce


语法

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | StructSpecifier SEMI
    6       | Specifier FuncDec CompSt
    7       | error SEMI

    8 Specifier: TYPE
    9          | StructSpecifier

   10 StructSpecifier: STRUCT OptTag LC DefList RC
   11                | STRUCT Tag

   12 OptTag: %empty
   13       | ID

   14 Tag: ID

   15 ExtDecList: VarDec
   16           | VarDec COMMA ExtDecList

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FuncDec: ID LP VarList RP
   20        | ID LP RP

   21 VarList: ParamDec
   22        | ParamDec COMMA VarList

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmList RC

   25 StmList: %empty
   26        | Stmt StmList

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | FOR LP ForDec RP Stmt
   34     | BREAK SEMI
   35     | CONTINUE SEMI

   36 ForDec: Exp SEMI Exp SEMI Exp
   37       | SEMI Exp SEMI

   38 DefList: %empty
   39        | Def DefList
   40        | error SEMI

   41 Def: Specifier DecList SEMI

   42 Dec: VarDec
   43    | VarDec ASSIGNOP Exp

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp PLUS PLUS
   52    | PLUS PLUS Exp
   53    | Exp PLUS ASSIGNOP Exp
   54    | Exp MINUS Exp
   55    | Exp MINUS MINUS
   56    | MINUS MINUS Exp
   57    | Exp MINUS ASSIGNOP Exp
   58    | Exp STAR Exp
   59    | Exp STAR ASSIGNOP Exp
   60    | Exp DIV Exp
   61    | Exp DIV ASSIGNOP Exp
   62    | LP Exp RP
   63    | MINUS Exp
   64    | NOT Exp
   65    | ID LP Args RP
   66    | ID LP RP
   67    | Exp LB Exp RB
   68    | Exp DOT ID
   69    | ID
   70    | INT
   71    | FLOAT
   72    | CHAR
   73    | STRING

   74 Args: Exp COMMA Args
   75     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 40
INT (258) 18 70
ID (259) 13 14 17 19 20 65 66 68 69
RELOP (260) 49
TYPE (261) 8
FLOAT (262) 71
CHAR (263) 72
STRING (264) 73
STRUCT (265) 10 11
LP (266) 19 20 30 31 32 33 62 65 66
RP (267) 19 20 30 31 32 33 62 65 66
LC (268) 10 24
RC (269) 10 24
SEMI (270) 4 5 7 27 29 34 35 36 37 40 41
COMMA (271) 16 22 45 74
LB (272) 18 67
RB (273) 18 67
DOT (274) 68
PLUS (275) 50 51 52 53
PLUS_ONE (276)
ONE_PLUS (277)
MINUS_ONE (278)
ONE_MINUS (279)
MINUS (280) 54 55 56 57 63
STAR (281) 58 59
DIV (282) 60 61
AND (283) 47
OR (284) 48
NOT (285) 64
IF (286) 30 31
ELSE (287) 31
WHILE (288) 32
RETURN (289) 29
FOR (290) 33
ASSIGNOP (291) 43 46 53 57 59 61
ASSIGNOP_MINUS (292)
ASSIGNOP_PLUS (293)
ASSIGNOP_DIV (294)
ASSIGNOP_STAR (295)
STRUCT_DEF (296)
STRUCT_DEC (297)
STRUCT_TAG (298)
BREAK_NODE (299)
CONTINUE_NODE (300)
FOR_DEC (301)
EXT_DEF_LIST (302)
EXT_VAR_DEF (303)
EXT_STRUCT_DEF (304)
FUNC_DEF (305)
FUNC_DEC (306)
EXT_DEC_LIST (307)
PARAM_LIST (308)
PARAM_DEC (309)
VAR_DEF (310)
DEC_LIST (311)
DEF_LIST (312)
COMP_STM (313)
STM_LIST (314)
EXP_STMT (315)
IF_THEN (316)
IF_THEN_ELSE (317)
FUNC_CALL (318)
ARGS (319)
FUNCTION (320)
PARAM (321)
ARG (322)
CALL (323)
LABEL (324)
GOTO (325)
JLT (326)
JLE (327)
JGT (328)
JGE (329)
EQ (330)
NEQ (331)
EXP_ELE (332)
EXP_ARRAY (333)
ARRAY_DEC (334)
BREAK (335) 34
CONTINUE (336) 35
UMINUS (337)
LOWER_THEN_ELSE (338)


Nonterminals, with rules where they appear

$accept (84)
    左： 0
program (85)
    左： 1, 右： 0
ExtDefList (86)
    左： 2 3, 右： 1 3
ExtDef (87)
    左： 4 5 6 7, 右： 3
Specifier (88)
    左： 8 9, 右： 4 6 23 41
StructSpecifier (89)
    左： 10 11, 右： 5 9
OptTag (90)
    左： 12 13, 右： 10
Tag (91)
    左： 14, 右： 11
ExtDecList (92)
    左： 15 16, 右： 4 16
VarDec (93)
    左： 17 18, 右： 15 16 18 23 42 43
FuncDec (94)
    左： 19 20, 右： 6
VarList (95)
    左： 21 22, 右： 19 22
ParamDec (96)
    左： 23, 右： 21 22
CompSt (97)
    左： 24, 右： 6 28
StmList (98)
    左： 25 26, 右： 24 26
Stmt (99)
    左： 27 28 29 30 31 32 33 34 35, 右： 26 30 31 32 33
ForDec (100)
    左： 36 37, 右： 33
DefList (101)
    左： 38 39 40, 右： 10 24 39
Def (102)
    左： 41, 右： 39
Dec (103)
    左： 42 43, 右： 44 45
DecList (104)
    左： 44 45, 右： 41 45
Exp (105)
    左： 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66 67 68 69 70 71 72 73, 右： 27 29 30 31 32 36 37 43 46 47
    48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 67 68 74 75
Args (106)
    左： 74 75, 右： 65 74


State 0

    0 $accept: . program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

    8 Specifier: TYPE .

    $default  reduce using rule 8 (Specifier)


State 3

   10 StructSpecifier: STRUCT . OptTag LC DefList RC
   11                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 12 (OptTag)

    OptTag  转到状态 11
    Tag     转到状态 12


State 4

    0 $accept: program . $end

    $end  shift, and go to state 13


State 5

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       转到状态 14
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . FuncDec CompSt

    ID  shift, and go to state 15

    ExtDecList  转到状态 16
    VarDec      转到状态 17
    FuncDec     转到状态 18


State 8

    5 ExtDef: StructSpecifier . SEMI
    9 Specifier: StructSpecifier .

    SEMI  shift, and go to state 19

    $default  reduce using rule 9 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   13 OptTag: ID .
   14 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 14 (Tag)


State 11

   10 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 12

   11 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 11 (StructSpecifier)


State 13

    0 $accept: program $end .

    $default  接受


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   17 VarDec: ID .
   19 FuncDec: ID . LP VarList RP
   20        | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 17 (VarDec)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 17

   15 ExtDecList: VarDec .
   16           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 15 (ExtDecList)


State 18

    6 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 25

    CompSt  转到状态 26


State 19

    5 ExtDef: StructSpecifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 20

   10 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 38 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 29
    DefList          转到状态 30
    Def              转到状态 31


State 21

   19 FuncDec: ID LP . VarList RP
   20        | ID LP . RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 32

    Specifier        转到状态 33
    StructSpecifier  转到状态 29
    VarList          转到状态 34
    ParamDec         转到状态 35


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   16 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  转到状态 37
    VarDec      转到状态 17


State 24

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 38


State 25

   24 CompSt: LC . DefList StmList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT       reduce using rule 38 (DefList)
    ID        reduce using rule 38 (DefList)
    FLOAT     reduce using rule 38 (DefList)
    CHAR      reduce using rule 38 (DefList)
    STRING    reduce using rule 38 (DefList)
    LP        reduce using rule 38 (DefList)
    LC        reduce using rule 38 (DefList)
    RC        reduce using rule 38 (DefList)
    PLUS      reduce using rule 38 (DefList)
    MINUS     reduce using rule 38 (DefList)
    NOT       reduce using rule 38 (DefList)
    IF        reduce using rule 38 (DefList)
    WHILE     reduce using rule 38 (DefList)
    RETURN    reduce using rule 38 (DefList)
    FOR       reduce using rule 38 (DefList)
    BREAK     reduce using rule 38 (DefList)
    CONTINUE  reduce using rule 38 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 29
    DefList          转到状态 39
    Def              转到状态 31


State 26

    6 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   40 DefList: error . SEMI

    SEMI  shift, and go to state 40


State 28

   41 Def: Specifier . DecList SEMI

    ID  shift, and go to state 36

    VarDec   转到状态 41
    Dec      转到状态 42
    DecList  转到状态 43


State 29

    9 Specifier: StructSpecifier .

    $default  reduce using rule 9 (Specifier)


State 30

   10 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 44


State 31

   39 DefList: Def . DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT       reduce using rule 38 (DefList)
    ID        reduce using rule 38 (DefList)
    FLOAT     reduce using rule 38 (DefList)
    CHAR      reduce using rule 38 (DefList)
    STRING    reduce using rule 38 (DefList)
    LP        reduce using rule 38 (DefList)
    LC        reduce using rule 38 (DefList)
    RC        reduce using rule 38 (DefList)
    PLUS      reduce using rule 38 (DefList)
    MINUS     reduce using rule 38 (DefList)
    NOT       reduce using rule 38 (DefList)
    IF        reduce using rule 38 (DefList)
    WHILE     reduce using rule 38 (DefList)
    RETURN    reduce using rule 38 (DefList)
    FOR       reduce using rule 38 (DefList)
    BREAK     reduce using rule 38 (DefList)
    CONTINUE  reduce using rule 38 (DefList)

    Specifier        转到状态 28
    StructSpecifier  转到状态 29
    DefList          转到状态 45
    Def              转到状态 31


State 32

   20 FuncDec: ID LP RP .

    $default  reduce using rule 20 (FuncDec)


State 33

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  转到状态 46


State 34

   19 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 47


State 35

   21 VarList: ParamDec .
   22        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 48

    $default  reduce using rule 21 (VarList)


State 36

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 37

   16 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 16 (ExtDecList)


State 38

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 49


State 39

   24 CompSt: LC DefList . StmList RC

    INT       shift, and go to state 50
    ID        shift, and go to state 51
    FLOAT     shift, and go to state 52
    CHAR      shift, and go to state 53
    STRING    shift, and go to state 54
    LP        shift, and go to state 55
    LC        shift, and go to state 25
    PLUS      shift, and go to state 56
    MINUS     shift, and go to state 57
    NOT       shift, and go to state 58
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    RETURN    shift, and go to state 61
    FOR       shift, and go to state 62
    BREAK     shift, and go to state 63
    CONTINUE  shift, and go to state 64

    $default  reduce using rule 25 (StmList)

    CompSt   转到状态 65
    StmList  转到状态 66
    Stmt     转到状态 67
    Exp      转到状态 68


State 40

   40 DefList: error SEMI .

    $default  reduce using rule 40 (DefList)


State 41

   18 VarDec: VarDec . LB INT RB
   42 Dec: VarDec .
   43    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 24
    ASSIGNOP  shift, and go to state 69

    $default  reduce using rule 42 (Dec)


State 42

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 44 (DecList)


State 43

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 71


State 44

   10 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 10 (StructSpecifier)


State 45

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 46

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


State 47

   19 FuncDec: ID LP VarList RP .

    $default  reduce using rule 19 (FuncDec)


State 48

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 33
    StructSpecifier  转到状态 29
    VarList          转到状态 72
    ParamDec         转到状态 35


State 49

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 50

   70 Exp: INT .

    $default  reduce using rule 70 (Exp)


State 51

   65 Exp: ID . LP Args RP
   66    | ID . LP RP
   69    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 69 (Exp)


State 52

   71 Exp: FLOAT .

    $default  reduce using rule 71 (Exp)


State 53

   72 Exp: CHAR .

    $default  reduce using rule 72 (Exp)


State 54

   73 Exp: STRING .

    $default  reduce using rule 73 (Exp)


State 55

   62 Exp: LP . Exp RP

    INT     shift, and go to state 50
    ID      shift, and go to state 51
    FLOAT   shift, and go to state 52
    CHAR    shift, and go to state 53
    STRING  shift, and go to state 54
    LP      shift, and go to state 55
    PLUS    shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58

    Exp  转到状态 74


State 56

   52 Exp: PLUS . PLUS Exp

    PLUS  shift, and go to state 75


State 57

   56 Exp: MINUS . MINUS Exp
   63    | MINUS . Exp

    INT     shift, and go to state 50
    ID      shift, and go to state 51
    FLOAT   shift, and go to state 52
    CHAR    shift, and go to state 53
    STRING  shift, and go to state 54
    LP      shift, and go to state 55
    PLUS    shift, and go to state 56
    MINUS   shift, and go to state 76
    NOT     shift, and go to state 58

    Exp  转到状态 77


State 58

   64 Exp: NOT . Exp
